# wizards-spiral

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: ideas.txt
assets/enemies/: archer.enemy.ron  ghoul.enemy.ron  knight.enemy.ron  necromancer.enemy.ron
assets/fonts/: fonts.assets.ron
assets/rooms/: church.assets.ron  church.info.ron  cottage.assets.ron  cottage.info.ron  forest.assets.ron  forest.info.ron  frozenlake.assets.ron  frozenlake.info.ron  graveyard.assets.ron  graveyard.info.ron  room_list.ron  shrine.assets.ron  shrine.info.ron  volcano.assets.ron  volcano.info.ron  wizardstower.assets.ron  wizardstower.info.ron
assets/sounds/: sounds.assets.ron
assets/sprites/: Background.ase  CottageBackground.ase  ForestObstacle.ase  FrozenLakeBackground.ase  FrozenLakeObstacle.ase  Hero.ase  PaladinKnight.ase  (+2 more)
source assets/: Armor.ase  ChurchBackground.ase  ChurchObstacle.ase  CottageObstacle.ase  Cover.ase  Dog.ase  EnemyArcher.ase  EnemyKnight.ase  FireElemental.ase  ForestBackground.ase  FrozenLakeObstacle.ase  Goblin.ase  GraveyardBackground.ase  Healing.ase  HealthbarEmpty.ase  HealthbarFull.ase  Hero.ase  Locked.ase  MagicElemental.ase  Mirror.ase  Pants.ase  Shield.ase  ShrineBackground.ase  ShrineObstacle.ase  Speed.ase  Sword.ase  Title.ase  UI Panel.ase  WizardsTowerBackground.ase  WizardsTowerObstacle.ase
src/: assets.rs  audio.rs  camera.rs  character_controller.rs  cycles.rs  damage.rs  enemy.rs  healthbars.rs  input.rs  main.rs  menus.rs  physics.rs  player.rs  projectiles.rs  rand.rs  save_data.rs  states.rs  text.rs  util.rs
(+50 files in other folders)
