[package]
name = "wizards-spiral"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy_asset_loader = { version = "0.21.0", features = ["2d", "standard_dynamic_assets"] }
bevy_common_assets = "0.11.0"
bevy_math = { version = "0.14.0", features = ["rand"] }
bevy_rapier2d = "0.27.0"
leafwing-input-manager = "0.14.0"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
thiserror = "1.0.63"
